--- a/resources/en.locale/Localized.strings
+++ b/resources/en.locale/Localized.strings
@@ -18,3 +18,11 @@ november=November
 december=December
 navigation_previous=<< previous
 navigation_next=next >>
+link_type_external_link=External link
+link_type_document=Document
+link_type_email=Email
+URL=URL
+title_tooltip=Title (Tooltip)
+target=Target
+save=Save
+link_creator=Link creator
