more localized strings

--- a/resources/Localizable.strings
+++ b/resources/Localizable.strings
@@ -21,8 +21,10 @@ navigation_next=next >>
 link_type_external_link=External link
 link_type_document=Document
 link_type_email=Email
+link_type_pages=Pages
 URL=URL
 title_tooltip=Title (Tooltip)
 target=Target
 save=Save
-link_creator=Link creator
+link_creator=Link Creator
+page_chooser=Page Chooser
