--- a/resources/en.locale/Localized.strings
+++ b/resources/en.locale/Localized.strings
@@ -28,3 +28,13 @@ target=Target
 save=Save
 link_creator=Link Creator
 page_chooser=Page Chooser
+image_chooser=Image Chooser
+image_type_external=External image
+image_type_document=Document
+url=Url
+alt=Alt
+alignment=Alignment
+border=Border
+horizontal=Horizontal
+vertical=Vertical
+image_preview=Image Preview
