--- a/resources/Localizable.strings
+++ b/resources/Localizable.strings
@@ -38,3 +38,6 @@ border=Border
 horizontal=Horizontal
 vertical=Vertical
 image_preview=Image Preview
+spacing=Spacing
+layout=Layout
+preview=Preview
