--- a/resources/en.locale/Localized.strings
+++ b/resources/en.locale/Localized.strings
@@ -38,3 +38,6 @@ border=Border
 horizontal=Horizontal
 vertical=Vertical
 image_preview=Image Preview
+spacing=Spacing
+layout=Layout
+preview=Preview
