Added personalId validator and login validator

--- a/resources/en.locale/Localized.strings
+++ b/resources/en.locale/Localized.strings
@@ -41,3 +41,13 @@ image_preview=Image Preview
 spacing=Spacing
 layout=Layout
 preview=Preview
+com.idega.webface.validate.login.TAKEN=Login Name is not available
+com.idega.webface.validate.login.TAKEN_detail={0} is not available
+com.idega.webface.validate.PersonalId.INVALID=The personal id you typed in seems to be invalid
+com.idega.webface.validate.PersonalId.INVALID_detail={0} is an invalid personal id
+com.idega.webface.validate.PersonalId.EMPTY_STRING=No personal id seems to have been typed in
+com.idega.webface.validate.PersonalId.EMPTY_STRING_detail=No personal id seems to have been typed in
+com.idega.webface.validate.PersonalId.INCORRECT_LENGTH=The personal Id you typed in should be 10 digits
+com.idega.webface.validate.PersonalId.INCORRECT_LENGTH_detail={0} is not of the correct length.  It should be 10 digits, without any spaces or dash characters.
+com.idega.webface.validate.PersonalId.NOT_DIGITS=The personal id should only contain digits
+com.idega.webface.validate.PersonalId.NOT_DIGITS_detail={0} is not valid.  It should only contain digits.
